--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
-
+    <meta
+      name="description"
+      content="Come check out what Victor Crest has been saying. You won't want to miss this!"
+    />
     <link
       rel="icon"
       type="image/png"
@@ -33,26 +35,26 @@
         <div class="circle">
           <img
             src="images/image-victor.jpg"
-            alt="profile-picture"
+            alt="Headshot of Victor Crest"
             class="profile-picture"
           />
         </div>
         <div class="bio">
           <div class="name-age">
-            <h2>Victor Crest<span class="age">26</span></h2>
+            <h1>Victor Crest<span class="age">26</span></h1>
           </div>
           <h3 class="city">London</h3>
           <div class="following">
             <div class="followers">
-              <h2>80K</h2>
+              <h1 aria-labelledby="followers">80K</h1>
               <p>Followers</p>
             </div>
             <div class="likes">
-              <h2>803K</h2>
+              <h1 aria-labelledby="likes">803K</h1>
               <p>Likes</p>
             </div>
             <div class="photos">
-              <h2>1.4K</h2>
+              <h1 aria-labelledby="photos">1.4K</h1>
               <p>Photos</p>
             </div>
           </div>
