fixing headshot dimension

--- a/index.html
+++ b/index.html
@@ -32,13 +32,12 @@
           class="header"
         />
 
-        <div class="circle">
-          <img
-            src="images/image-victor.jpg"
-            alt="Headshot of Victor Crest"
-            class="profile-picture"
-          />
-        </div>
+        <img
+          src="images/image-victor.jpg"
+          alt="Headshot of Victor Crest"
+          class="profile-picture circle"
+        />
+
         <div class="bio">
           <div class="name-age">
             <h1>Victor Crest<span class="age">26</span></h1>
